--- a/MonoCross.Navigation/MonoCross.Navigation.MO.csproj
+++ b/MonoCross.Navigation/MonoCross.Navigation.MO.csproj
@@ -119,6 +119,8 @@
     <Compile Include="MXView.cs" />
     <Compile Include="MXViewPerspective.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SerializableDictionary.cs" />
+    <Compile Include="Session.cs" />
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' ">
     <VisualStudioVersion>11.0</VisualStudioVersion>
