--- a/CustomerManagement/CustomerManagement.Touch/CustomerManagement.Touch.csproj
+++ b/CustomerManagement/CustomerManagement.Touch/CustomerManagement.Touch.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -62,7 +62,7 @@
     <Reference Include="monotouch" />
     <Reference Include="System.Web.Services" />
   </ItemGroup>
-  <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
+  <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.MonoTouch.CSharp.targets" />
   <ItemGroup>
     <ProjectReference Include="..\CustomerManagement\CustomerManagement.MT.csproj">
       <Project>{77C8BF6C-FD60-4323-A133-DF2E6CD4A5B3}</Project>
