--- a/MonoCross.Navigation/MonoCross.Navigation.CF.csproj
+++ b/MonoCross.Navigation/MonoCross.Navigation.CF.csproj
@@ -61,6 +61,8 @@
     <Compile Include="MXViewPerspective.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="MXView.cs" />
+    <Compile Include="SerializableDictionary.cs" />
+    <Compile Include="Session.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CompactFramework.CSharp.targets" />
   <ProjectExtensions>
