--- a/MonoCross.Navigation/MonoCross.Navigation.MF.csproj
+++ b/MonoCross.Navigation/MonoCross.Navigation.MF.csproj
@@ -45,6 +45,8 @@
     <Compile Include="MXViewPerspective.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="MXView.cs" />
+    <Compile Include="SerializableDictionary.cs" />
+    <Compile Include="Session.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
