--- a/MonoCross.Navigation/MonoCross.Navigation.SL.csproj
+++ b/MonoCross.Navigation/MonoCross.Navigation.SL.csproj
@@ -106,6 +106,8 @@
     <Compile Include="MXViewPerspective.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="MXView.cs" />
+    <Compile Include="SerializableDictionary.cs" />
+    <Compile Include="Session.cs" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include="Microsoft.Net.Client.3.5">
