--- a/MonoCross.Droid/MonoCross.Droid.csproj
+++ b/MonoCross.Droid/MonoCross.Droid.csproj
@@ -41,14 +41,18 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MXActivityView.cs" />
-    <Compile Include="MXDialogActivityView.cs" />
-    <Compile Include="MXListActivityView.cs" />
-    <Compile Include="MXFragmentView.cs" />
-    <Compile Include="MXDialogFragmentView.cs" />
-    <Compile Include="MXListFragmentView.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="MXDroidContainer.cs" />
+    <Compile Include="MXFragmentView.cs" />
+    <Compile Include="MXListActivityView.cs" />
+    <Compile Include="MXListFragmentView.cs" />
     <Compile Include="MXTabActivityView.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\MonoCross.Navigation\MonoCross.Navigation.csproj">
+      <Project>{fb6b0fe8-51d8-4f5b-aa6a-280250820233}</Project>
+      <Name>MonoCross.Navigation</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Novell\Novell.MonoDroid.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
@@ -58,14 +62,4 @@
   <Target Name="AfterBuild">
   </Target>
   -->
-  <ItemGroup>
-    <ProjectReference Include="..\Android.Dialog\Android.Dialog.csproj">
-      <Project>{33044c7b-47a4-4113-a61a-eb429407f818}</Project>
-      <Name>Android.Dialog</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\MonoCross.Navigation\MonoCross.Navigation.MD.csproj">
-      <Project>{0D2CC54A-4716-40B9-8110-453F528810FC}</Project>
-      <Name>MonoCross.Navigation.MD</Name>
-    </ProjectReference>
-  </ItemGroup>
 </Project>
