Updated Referneces for MonoCross.Touch, removing MonoTouch.NinePatch
Includes utilizing new MonoCross.Navigation Portable Class libary
version, and replacing MonoTouch.Dialog source with MonoTouch.Dialog
included with MonoTouch/Xamarin.iOS

--- a/MonoCross.Touch/MonoCross.Touch.csproj
+++ b/MonoCross.Touch/MonoCross.Touch.csproj
@@ -58,6 +58,7 @@
     <Reference Include="System.Xml" />
     <Reference Include="System.Core" />
     <Reference Include="monotouch" />
+    <Reference Include="MonoTouch.Dialog-1" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.MonoTouch.CSharp.targets" />
   <ItemGroup>
@@ -73,17 +74,9 @@
     <Compile Include="SplitViewController\MGCornersView.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\MonoCross.Navigation\MonoCross.Navigation.MT.csproj">
-      <Project>{0C3337B2-0B8A-4C0B-8330-3B81F5B96B9B}</Project>
-      <Name>MonoCross.Navigation.MT</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\MonoTouch.NinePatch\MonoTouch.NinePatch.csproj">
-      <Project>{47B205F6-5FDC-44B6-897D-4DE19422FC73}</Project>
-      <Name>MonoTouch.NinePatch</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\MonoTouch.Dialog\MonoTouch.Dialog.csproj">
-      <Project>{3FFBFFF8-5560-4EDE-82E5-3FFDFBBA8A50}</Project>
-      <Name>MonoTouch.Dialog</Name>
+    <ProjectReference Include="..\MonoCross.Navigation\MonoCross.Navigation.csproj">
+      <Project>{FB6B0FE8-51D8-4F5B-AA6A-280250820233}</Project>
+      <Name>MonoCross.Navigation</Name>
     </ProjectReference>
   </ItemGroup>
 </Project>
