--- a/BestSellers/BestSellers.Touch/BestSellers.Touch.csproj
+++ b/BestSellers/BestSellers.Touch/BestSellers.Touch.csproj
@@ -72,9 +72,9 @@
       <Project>{81A006BF-DF83-4FFA-B463-11D8A2058339}</Project>
       <Name>BestSellers.MT</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\MonoCross.Navigation\MonoCross.Navigation.MT.csproj">
+    <ProjectReference Include="..\..\MonoCross.Navigation\MonoCross.Navigation.csproj">
       <Project>{0C3337B2-0B8A-4C0B-8330-3B81F5B96B9B}</Project>
-      <Name>MonoCross.Navigation.MT</Name>
+      <Name>MonoCross.Navigation</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\MonoTouch.Dialog\MonoTouch.Dialog.csproj">
       <Project>{3FFBFFF8-5560-4EDE-82E5-3FFDFBBA8A50}</Project>
