--- a/BestSellers/BestSellers/BestSellers.MT.csproj
+++ b/BestSellers/BestSellers/BestSellers.MT.csproj
@@ -71,9 +71,9 @@
     <Compile Include="Model\CategoryList.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\MonoCross.Navigation\MonoCross.Navigation.MT.csproj">
+    <ProjectReference Include="..\..\MonoCross.Navigation\MonoCross.Navigation.csproj">
       <Project>{0C3337B2-0B8A-4C0B-8330-3B81F5B96B9B}</Project>
-      <Name>MonoCross.Navigation.MT</Name>
+      <Name>MonoCross.Navigation</Name>
     </ProjectReference>
   </ItemGroup>
 </Project>
