--- a/MonoCross.Navigation/MonoCross.Navigation.csproj
+++ b/MonoCross.Navigation/MonoCross.Navigation.csproj
@@ -39,6 +39,7 @@
     <!-- A reference to the entire .NET Framework is automatically included -->
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MXViewEntry.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="MXContainer.cs" />
     <Compile Include="MXView.cs" />
