--- a/BestSellers/BestSellers.Touch/Info.plist
+++ b/BestSellers/BestSellers.Touch/Info.plist
@@ -11,22 +11,19 @@
 	<key>CFBundleIdentifier</key>
 	<string>com.itrgroup.bestsellers</string>
 	<key>MinimumOSVersion</key>
-	<string>3.0</string>
+	<string>5.0</string>
 	<key>UIDeviceFamily</key>
 	<array>
-		<string>1</string>
+		<integer>1</integer>
 	</array>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
 		<string>UIInterfaceOrientationPortraitUpsideDown</string>
 	</array>
-	<key>UISupportedInterfaceOrientations~ipad</key>
-	<array>
-		<string>UIInterfaceOrientationPortrait</string>
-		<string>UIInterfaceOrientationPortraitUpsideDown</string>
-		<string>UIInterfaceOrientationLandscapeLeft</string>
-		<string>UIInterfaceOrientationLandscapeRight</string>
-	</array>
+	<key>CFBundleVersion</key>
+	<string>1.9</string>
+	<key>NSMainNibFile</key>
+	<string></string>
 </dict>
 </plist>
