--- a/MonoCross.Navigation/MonoCross.Navigation.CF.csproj
+++ b/MonoCross.Navigation/MonoCross.Navigation.CF.csproj
@@ -2,7 +2,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.21022</ProductVersion>
+    <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{4275E2E0-8941-4CCC-BBE7-413868F1A581}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -50,19 +50,23 @@
     <Reference Include="mscorlib" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MXApplication.cs" />
-    <Compile Include="MXContainer.cs" />
-    <Compile Include="MXNavigation.cs" />
-    <Compile Include="MXController.cs" />
-    <Compile Include="MXViewEntry.cs" />
-    <Compile Include="MXViewPerspective.cs" />
+    <Compile Include="MXViewMap.cs" />
+    <Compile Include="NamedTypeMap.cs" />
+    <Compile Include="ReflectionExtensions.cs" />
+    <Compile Include="TypeLoader.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="MXContainer.cs" />
     <Compile Include="MXView.cs" />
+    <Compile Include="MXApplication.cs" />
+    <Compile Include="MXController.cs" />
+    <Compile Include="MXNavigation.cs" />
     <Compile Include="SerializableDictionary.cs" />
     <Compile Include="Session.cs" />
+    <Compile Include="ViewPerspective.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CompactFramework.CSharp.targets" />
   <ProjectExtensions>
