--- a/MonoCross.Navigation/MonoCross.Navigation.csproj
+++ b/MonoCross.Navigation/MonoCross.Navigation.csproj
@@ -37,15 +37,18 @@
     <!-- A reference to the entire .NET Framework is automatically included -->
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MXViewMap.cs" />
+    <Compile Include="NamedTypeMap.cs" />
+    <Compile Include="TypeLoader.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="MXContainer.cs" />
     <Compile Include="MXView.cs" />
     <Compile Include="MXApplication.cs" />
     <Compile Include="MXController.cs" />
     <Compile Include="MXNavigation.cs" />
-    <Compile Include="MXViewPerspective.cs" />
     <Compile Include="SerializableDictionary.cs" />
     <Compile Include="Session.cs" />
+    <Compile Include="ViewPerspective.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
